fix: layout issues with header, content, and footer.

--- a/src/components/list/components/listControls/styles.module.scss
+++ b/src/components/list/components/listControls/styles.module.scss
@@ -1,7 +1,11 @@
 @use "styles/vars";
 
 .container {
+  width: 100%;
+  flex-direction: row;
+
   .searchInputContainer {
+    flex: 1;
     align-items: center;
     justify-content: center;
   }
