--- a/src/layouts/protectedLayout/components/header/styles.module.scss
+++ b/src/layouts/protectedLayout/components/header/styles.module.scss
@@ -1,11 +1,7 @@
 @use "styles/vars";
 
 .container {
-  height: vars.$layout-height-navbar;
-  width: 100%;
   flex-direction: row;
-  position: fixed;
-  z-index: 1;
   padding: vars.$spacing-primary;
   background-color: vars.$color-background;
   align-items: center;
