--- a/src/pages/flashcardsPage/styles.module.scss
+++ b/src/pages/flashcardsPage/styles.module.scss
@@ -6,6 +6,7 @@
   .listItem {
     overflow: hidden;
     flex-direction: row;
+    width: 100%;
   }
 }
 
